--- a/teachersday/src/style/main.module.css
+++ b/teachersday/src/style/main.module.css
@@ -33,7 +33,7 @@
 .inputLine {
   display: flex;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
   margin-top: 20px;
 }
 
